--- a/CSS/indexCSS.css
+++ b/CSS/indexCSS.css
@@ -509,6 +509,7 @@ hr {
 	
 }
 
+/* IF THE SCREEN WIDTH IS SMALL, ADJUST THE WRAPPER TO ACCOMMODATE THE SCREEN BETTER */
 
 @media screen and (max-width: 750px) {
 	
@@ -530,8 +531,40 @@ hr {
 		border-top-right-radius: 0px;
 	}
 	
-	.wrapper {
-		grid-template-rows: 100px 1fr 1fr;
+}
+
+/* IF THE USER IS ON A DEVICE WITHOUT A POINTER (TOUCHSCREEN), MAKE THE UI TOUCH-FRIENDLY */
+
+@media (pointer:none), (pointer:coarse) {
+	
+	.sideBySideContent {
+	grid-template-columns: repeat(2,1fr);
+	}
+	
+	.linkBar {
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 2;
+	}
+	
+	#rightLinkBarButton {
+		border-top-right-radius: 0px;
+	}
+	
+	.rightLinkBarButton {
+		border-top-right-radius: 0px;
+	}
+	
+	.sideBySideContent {
+		grid-template-columns: repeat(2,1fr);
+	}
+	
+	#endOfLineOne {
+		transition: 0s;
+		border-top-right-radius: 25px;
+	}
+	
+	.linkBarButton, #currentPage {
+		padding:5% 0;
 	}
 	
 }
