--- a/CSS/paypalCSS.css
+++ b/CSS/paypalCSS.css
@@ -42,7 +42,6 @@ body {
 .wrapper {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 3;
 	padding: 0px;
 	margin: 25px;
 }
@@ -267,6 +266,8 @@ input {
     display: block;
 }
 
+/* IF THE SCREEN WIDTH IS SMALL, ADJUST THE WRAPPER TO ACCOMMODATE THE SCREEN BETTER */
+
 @media screen and (max-width: 750px) {
 	
 	.linkBar {
@@ -278,10 +279,6 @@ input {
         grid-column: span 12;
     }
 	
-	.wrapper {
-		grid-template-rows: 3;
-	}
-	
 	#endOfLineOne {
 		transition: 0s;
 		border-top-right-radius: 25px;
@@ -292,3 +289,39 @@ input {
 	}
 	
 } 
+
+/* IF THE USER IS ON A DEVICE WITHOUT A POINTER (TOUCHSCREEN), MAKE THE UI TOUCH-FRIENDLY */
+
+@media (pointer:none), (pointer:coarse) {
+	
+	.sideBySideContent {
+	grid-template-columns: repeat(2,1fr);
+	}
+	
+	.linkBar {
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 2;
+	}
+	
+	#rightLinkBarButton {
+		border-top-right-radius: 0px;
+	}
+	
+	.rightLinkBarButton {
+		border-top-right-radius: 0px;
+	}
+	
+	.sideBySideContent {
+		grid-template-columns: repeat(2,1fr);
+	}
+	
+	#endOfLineOne {
+		transition: 0s;
+		border-top-right-radius: 25px;
+	}
+	
+	.linkBarButton, #currentPage, .leftLinkBarButton {
+		padding:5% 0;
+	}
+	
+}
